# aur-pkgbuild-updater

./: AGENTS.md  LICENSE  README.md  check_updates.py  packages.toml  pyproject.toml
.github/workflows/: check-updates.yml
