[project]
name = "aur-pkgbuild-updater"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "packaging",
]

[dependency-groups]
dev = [
    "ruff",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
